fixed text align big pain

--- a/src/app/components/home-component/home-component.component.css
+++ b/src/app/components/home-component/home-component.component.css
@@ -1,5 +1,3 @@
-body {
-}
 
 md-card {
   height: 100vh;
@@ -48,9 +46,14 @@ button {
   text-align: center;
   font-size: 2em;
   padding: 2rem;
+  width: 100%;
 }
 
-.mat-card-actions .mat-button:first-child, .mat-card-actions .mat-raised-button:first-child {
-  text-align: center;
-  margin: auto;
+
+
+.mat-button:first-child {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
 }
